# kot-biz

./: .gitignore  index.html  package-lock.json  package.json
landing/: index.html
player/: index.html
portable/: server.ps1  start.bat
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: game.rs  lib.rs  main.rs  server.rs
src-tauri/src/db/: sqlite.rs
src-tauri/src/game/: messages.rs  mod.rs  state.rs  types.rs
src-tauri/src/ws/: server.rs
src/common/: types.ts  ws.ts
src/components/: BalanceBar.tsx  CatCard.tsx  HouseCard.tsx  TradePanel.tsx  TurnTimer.tsx
src/pages/: HostGame.tsx  HostLobby.tsx  MobileGame.tsx  MobileLobby.tsx
src/store/: gameStore.ts
src/styles/: themes.css
