[package]
name = "business-cats"
version = "0.1.0"
edition = "2021"
description = "Business Cats — local network multiplayer game"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
parking_lot = "0.12"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "business_cats_lib"
crate-type = ["lib", "cdylib", "staticlib"]
